言語の設定変更が漏出しないように修正

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,20 @@
 ---
 en:
+  :title: title
+  title: title
+  Books: Books
+  Title: title
+  Author: Author
+  Memo: Memo
+  Picture: Picture
+  Title: title  
+  Show: Show
+  Edit: Edit
+  Destroy: Destroy
+  BooksApp: BooksApp
+  New Book: New Book
+  Editing Book: Editing Book
+  Back: Back
   BooksApp: BooksApp
   notice:
     create: Book was successfully created.
