views/layout/applicationiで18対応を行った

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -220,6 +220,7 @@ ja:
       title_edit: "%{name}の編集"
       Sign up: "サインアップ"
       Log in: ログイン
+      Log out: ログアウト
       Users: ユーザー一覧
     devise:
       Cancel my account: アカウントの削除
