--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,18 +1,14 @@
 ---
 en:
   activerecord:
+    models:
+      book: books
     attributes:
       book:
         title: title
         author: Author
         memo: Memo
         picture: Picture
-  title: title
-  books: Books
-  title: title
-  author: Author
-  memo: Memo
-  picture: Picture
   show: Show
   edit: Edit
   destroy: Destroy
