--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,10 +15,12 @@ ja:
     destroy: "%{name}を削除しました"
   confirm:
     sure?: 消えてしまいますが、よろしいですか？
-  show: 詳細
-  edit: 編集
-  destroy: 消去
   books_app: 本のアプリ
   new_book: 新規作成
   editing_book: 編集
-  back: 戻る
+  views:
+    show: 詳細
+    edit: 編集
+    destroy: 削除
+    new: 新規作成
+    back: 戻る
