英訳の動的対応と、日本語のアプリ名を固定にし、確認メッセージを修正

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,8 +16,8 @@ en:
     new: New
     back: Back
   titles:
-    new: New Book
-    editing: Editing Book
+    new: "New %{name}"
+    editing: "Editing %{name}"
     app: Books App
   notice:
     create: "%{name} was successfully created."
