--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,7 +16,7 @@ ja:
     new: 新規作成
     back: 戻る
   titles:
-    app: "%{name}のアプリ"
+    app: "本のアプリ"
     new: "%{name}の新規作成"
     edit: "%{name}の編集"
   notice:
@@ -24,5 +24,5 @@ ja:
     update: "%{name}を登録しました"
     destroy: "%{name}を削除しました"
   confirm:
-    sure?: 消えてしまいますが、よろしいですか？
+    sure?: 削除したあとは復旧できません。よろしいですか？
 
