--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -3,6 +3,7 @@ ja:
     models:
       book: 本  #g
       user: ユーザ
+      follow_relationship: フォロー
 
     attributes:
       book:
@@ -16,3 +17,8 @@ ja:
         address: 住所
         self_introduction: 自己紹介文
         avatar: ユーザ画像
+      follow_relationship:
+        following: フォロー
+        followers: フォロワー
+        follow: フォロー
+        unfollow: フォロー解除
