ActiveRecordのモデルの属性かどうか、Model.columnかどうかで判断

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -239,3 +239,8 @@ ja:
     registrations:
       edit:
         title: "アカウント編集"
+  followrelationship:
+    followings: フォロー
+    followers: フォロワー
+    follow: フォロー
+    unfollow: フォロー解除
